feat[update customer]: implemented patch api to update customer information(only provided)
